[package]
name        = "zkt"
version     = "0.0.2"
description = "A note-taking tool based on the famous Zettelkasten method"
authors     = ["Liam <liam@scalzulli.com>"]
license     = "CC0-1.0"
homepage    = "https://github.com/terror/zk"
repository  = "https://github.com/terror/zk"
edition     = "2018"
categories  = ["command-line-utilities"]
keywords    = ["command-line", "productivity", "note-taking", "utility"]
resolver    = "2"

[[bin]]
name = "zk"
path = "src/main.rs"

[dependencies]
chrono      = "0.4.19"
colored     = "2.0.0"
dirs        = "3.0.2"
matter      = "0.1.0-alpha4"
shellexpand = "2.1.0"
skim        = "0.9.4"
snafu       = "0.6.10"
structopt   = "0.3.0"
toml        = "0.5.8"
walkdir     = "2.3.2"
xdg         = "2.2.0"
serde_yaml  = "0.8.0"

[dependencies.serde]
version  = "1.0.0"
features = ["derive"]

[dev-dependencies]
tempfile = "3.2.0"
textwrap = "0.14.2"
