[package]
name = "zk-cli"
version = "0.1.0"
description = "A note-taking tool based on the famous Zettelkasten method"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/zk"
repository = "https://github.com/terror/zk"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["command-line", "productivity", "note-taking", "utility"]
resolver = "2"

[[bin]]
name = "zk"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
colored = "2.2.0"
dirs = "4.0.0"
indoc = "1.0.9"
matter = "0.1.0-alpha4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.26"
shellexpand = "2.1.2"
skim = "0.9.4"
snafu = "0.6.10"
toml = "0.5.11"
walkdir = "2.5.0"
xdg = "2.5.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.19.1"
